Fix alignment for h2 elements in section.sass to ensure consistent text presentation

--- a/frontend/src/assets/sass/main/section.sass
+++ b/frontend/src/assets/sass/main/section.sass
@@ -37,7 +37,8 @@ div.card-container
         text-align: center
         padding-block: .5em
         
-
+.h2
+    text-align: center
 
 .member-container
     @include background-color($soft-white, $Groovy-brown, $Groovy-orange)
